updated lab and pre-req

--- a/manifest.json
+++ b/manifest.json
@@ -5,19 +5,15 @@
             "filename": "./prereq/prereq.md"
           },
           {
-            "title": "Lab 1: Configure Oracle API Gateway",
-            "filename": "./configure-oci-apigw/OCI-apigw.md"
-        },
-        {
+            "title": "Lab 1: Configure Oracle Functions and API Gateway",
+            "filename": "./configure-oci-apigw-fn/OCI-apigw-fn.md"
+          },
+          {
           "title": "Lab 2: Configure the HCM Instance",
           "filename": "./configure-hcm/configure-hcm.md"
-      },
-      {
-        "title": "Lab 3: Configure Oracle Serverless Function",
-        "filename": "./configure-oci-fn/OCI-fn.md"
-    },
+          },
           {
-            "title": "Lab 4: Test your Setup",
+            "title": "Lab 3: Test your Setup",
             "filename": "./test-lab/test-lab.md"
           }
     ]
