updated the title and HCM to ORC

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
             "filename": "./configure-oci-apigw-fn/OCI-apigw-fn.md"
           },
           {
-          "title": "Lab 2: Configure the HCM Instance",
+          "title": "Lab 2: Configure the ORC Career Site's Vanity URL",
           "filename": "./configure-hcm/configure-hcm.md"
           },
           {
